--- a/SharedSettings/Catalyst.ClassLibrary.nuspec
+++ b/SharedSettings/Catalyst.ClassLibrary.nuspec
@@ -11,7 +11,7 @@
     <description>Deployment package for shared code analysis rules. Health Catalyst rules that make sense in class library projects.</description>
   </metadata>
   <files>
-    <file src="build\Catalyst.MinimumRecommendedRules.targets" target="build" />
-    <file src="build\Catalyst.MinimumRecommendedRules.ruleset" target="build" />
+    <file src="build\Catalyst.ClassLibrary.targets" target="build" />
+    <file src="build\Catalyst.ClassLibrary.ruleset" target="build" />
   </files>
 </package>
