--- a/SharedSettings/Catalyst.ClassLibrary.nuspec
+++ b/SharedSettings/Catalyst.ClassLibrary.nuspec
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
-  <metadata>
-    <id>Catalyst.MinimumRecommendedRules</id>
+  <metadata minClientVersion="2.8">
+    <id>Catalyst.ClassLibrary</id>
     <title>Catalyst shared Code Analisys Rules: Class Library rules</title>
     <version>$version$</version>
     <authors>Health Catalyst</authors>
@@ -9,6 +9,7 @@
     <licenseUrl>https://github.com/HealthCatalyst/Fabric.SharedSettings</licenseUrl>
     <projectUrl>https://github.com/HealthCatalyst/Fabric.SharedSettings</projectUrl>
     <description>Deployment package for shared code analysis rules. Health Catalyst rules that make sense in class library projects.</description>
+    <developmentDependency>true</developmentDependency>
   </metadata>
   <files>
     <file src="build\Catalyst.ClassLibrary.ruleset" target="build" />
