--- a/Catalyst.ClassLibrary.nuspec
+++ b/Catalyst.ClassLibrary.nuspec
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata minClientVersion="2.8">
-    <id>Catalyst.MostRules.Error</id>
-    <title>Catalyst shared Code Analisys Rules: Most rules as error</title>
+    <id>Catalyst.CodeAnalysis.ClassLibrary</id>
+    <title>Catalyst shared Code Analysis Rules: Class Library rules</title>
     <version>$version$</version>
     <authors>Health Catalyst</authors>
     <owners>Health Catalyst</owners>
     <licenseUrl>https://github.com/HealthCatalyst/Fabric.SharedSettings</licenseUrl>
     <projectUrl>https://github.com/HealthCatalyst/Fabric.SharedSettings</projectUrl>
-    <description>Deployment package for shared code analysis rules. This ruleset is based on Microsoft.AllRules.Errors.ruleset with some HealthCatalyst modifications.</description>
+    <description>Deployment package for shared code analysis rules. Health Catalyst rules that make sense in class library projects.</description>
     <developmentDependency>true</developmentDependency>
   </metadata>
   <files>
-    <file src="build\Catalyst.MostRules.Error.ruleset" target="build" />
+    <file src="SharedSettings\Catalyst.ClassLibrary.ruleset" target="build" />
   </files>
 </package>
