--- a/SharedSettings/Catalyst.TestRules.ruleset.editorconfig
+++ b/SharedSettings/Catalyst.TestRules.ruleset.editorconfig
@@ -18,3 +18,4 @@ dotnet_diagnostic.CA1812.severity = none
 dotnet_diagnostic.SA1305.severity = none
 dotnet_diagnostic.SA1402.severity = none
 dotnet_diagnostic.SA1413.severity = none
+dotnet_diagnostic.VSTHRD111.severity = none
