--- a/SharedSettings/Catalyst.MostRules.Error.ruleset.editorconfig
+++ b/SharedSettings/Catalyst.MostRules.Error.ruleset.editorconfig
@@ -9,7 +9,7 @@
 
 # Default severity for analyzer diagnostics - Requires **VS2019 16.5** or later
 dotnet_analyzer_diagnostic.severity = error
-dotnet_diagnostic.severity = error
+
 dotnet_diagnostic.CA1002.severity = none
 dotnet_diagnostic.CA1006.severity = none
 dotnet_diagnostic.CA1008.severity = none
@@ -27,6 +27,10 @@ dotnet_diagnostic.CA2210.severity = none
 dotnet_diagnostic.CA2227.severity = none
 dotnet_diagnostic.CS1591.severity = none
 dotnet_diagnostic.IDE0003.severity = none
+dotnet_diagnostic.IDE0007.severity = none # 'var' preferences; I trust devs to know when they want to be explicit.
+dotnet_diagnostic.IDE0046.severity = none
+dotnet_diagnostic.IDE0050.severity = silent
+dotnet_diagnostic.IDE0058.severity = none
 dotnet_diagnostic.SA0001.severity = none
 dotnet_diagnostic.SA1009.severity = none
 dotnet_diagnostic.SA1111.severity = none
